--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -185,6 +185,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44955805">О нюансах репрезентации: образ еврейской культуры в трилогии "Наука побеждать"</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45301366">Обломки</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45175336">Огненный зверь</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -203,13 +206,25 @@
         <a target="_blank" href="https://archiveofourown.org/works/44667598">Como te llamas</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45445789">El señor de la noche</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44667481">We are one</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44875966">«Лука Модрич» — новый проект студии Pixar</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45445837">Бизнес</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45246019">Валентинки</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44549839">Визитка команды WTF Новогодняя сборная имени Оливье 2023</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45445894">Вселенная</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44667163/chapters/112374514">Гранатовый браслет (Тэмми и Жозе)</a>
@@ -230,13 +245,25 @@
         <a target="_blank" href="https://archiveofourown.org/works/44874616">Рыцарь и король</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45246937">Салат «Каламбур» (анекдоты про Златана)</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44667814">Фамильяр</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45446023">Хороший мальчик</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44667163/chapters/112374445">Цезарь (Юрген и Хосеп)</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44876005">Чиби-Златан</a>
+    </li>
+</ul>
+<h2>WTF Adult Comics 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45497389">Во имя чего мы трахаемся сегодня вечером?</a>
     </li>
 </ul>
 <h2>WTF Aeterna 2023</h2>
@@ -281,6 +308,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44824390">[Арт] Buenos días</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45348976">[Арт] Dirty</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44829361">[Арт] Ego</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -305,6 +335,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44824975">[Арт] Ворон</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45348100">[Арт] Грёзы</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44824333">[Арт] Зимняя забава</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -317,6 +350,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44823853">[Арт] Отпуск на Марикьяре</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45349618">[Арт] Отпуск на Марикьяре</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45348676">[Арт] Прекрасное далёко</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44823187">[Арт] Руппи в кошках</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -327,6 +366,12 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44824075">[Арт] Сны из Багерлее</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45348211">[Арт] Спиной к спине, плечом к плечу</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45349786">[Арт] Шадский наложник</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44823082">[Арт] Эпинэ задумчивый</a>
@@ -353,6 +398,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44982673">[Вышивка] Кэналлийский Ворон</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45349870">[Клип] Весна</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45349402">[Клип] Пойдешь ли ты за мной в темноту?</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44996683">[Крафт] Непростое украшение</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -369,6 +420,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44985229">[Схема вышивки] Розы Алвасете</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45184024">В одной из бусин Ожерелья</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44611438">В серых стенах Лаик</a>
@@ -398,6 +452,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44650111">Завтра не придет — лишь трава разлуки высока</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45181237">Зверь внутри тебя жаждет добычи, но у него есть только я</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44615401">Когда в Олларии цветёт сирень</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -416,6 +473,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44649592">Лучше подавать холодным</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45182557">Люби меня, а не Войну!</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44650417">Метельников и Ко</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -431,6 +491,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44651275">Нарушители</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45181540">Наследник рода</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44648932">Немного о наивных оруженосцах</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -440,10 +503,19 @@
         <a target="_blank" href="https://archiveofourown.org/works/44648677">Ночная исповедь</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45183583">Олларианский вепрь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44649850">Паутина</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45182008">Первый и Святой</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44649709">Повернёт на полдень ночь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45184837">Под покровом ночи</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44615590">Подарок</a>
@@ -480,6 +552,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44646574">Утро в Олларии</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45182743">Четвертый и Король</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44610772">Шаг вверх</a>
@@ -524,6 +599,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/45154237"><span class="lang">Українська</span>Її маленький мисливець</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45497401"><span class="lang">Українська</span>Порятунок</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45151003"><span class="lang">Українська</span>Те, у чого немає імені</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
@@ -545,6 +623,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44731885">Твое место между моих ног</a>
     </li>
 </ul>
+<h2>WTF BOZHAN PAPAPA 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45470473">[Art] Любимый наложник</a>
+    </li>
+</ul>
 <h2>WTF Captain Blood 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -560,6 +644,9 @@
 <h2>WTF Dragon Age 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45327553">[Art] Alistair's Erection</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44787670">[Art] Blood Magic</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -570,6 +657,12 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44977972">[Art] Korcari Wilds</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45327610">[Art] Moonlight Erection</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45327379">[Art] Sunny Erection</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44787637">[Art] The Messenger</a>
@@ -617,10 +710,22 @@
         <a target="_blank" href="https://archiveofourown.org/works/44812603">Танцующий Игорь</a>
     </li>
 </ul>
+<h2>WTF Genshin Impact 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45243007">Там, где мы есть</a>
+    </li>
+</ul>
 <h2>WTF Het 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44552143">WTF Het 2023: чай, кофе, потанцуем?</a>
+    </li>
+</ul>
+<h2>WTF Incest 2023</h2>
+<ul>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45495004"><span class="lang">English</span>No one cares</a>
     </li>
 </ul>
 <h2>WTF IS IT 2023</h2>
@@ -636,6 +741,27 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44808109">Почему на самом деле конфликтуют антивирусы</a>
+    </li>
+</ul>
+<h2>WTF Jin Guangyao 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45204715">Făn hún xiāng</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45205084">[art] Сон Верховного заклинателя</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45204508">[collage] distracted boyfriend</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45204361">[collage] Не Минцзюэ и три Цзинь Гуанъяо</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45204622">[collage] Размышления</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45205654">[craft] Веер «Сады Ланьлина»</a>
     </li>
 </ul>
 <h2>WTF Kylux and Co 2023</h2>
@@ -752,6 +878,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/43409637"><span class="lang">беларуская</span>Небяспечныя сувязі</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45206077"><span class="lang">беларуская</span>Правая рука</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44664868"><span class="lang">беларуская</span>Традыцыі і іннавацыі</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
@@ -762,6 +891,18 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44665795"><span class="lang">беларуская</span>Шнары</a>
+    </li>
+</ul>
+<h2>WTF Our Flag Means Death 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45153568">Двойная оптика</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45147556">Десять саженей вглубь по дороге в ад</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45147229">Искусство комплимента</a>
     </li>
 </ul>
 <h2>WTF Polyamory 2023</h2>
@@ -842,6 +983,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/45167263">Равноценный обмен</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45342226">Разлетелось хлебало</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45342121">Твой черед</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45167476">Тихое место</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -852,6 +999,9 @@
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44811220">Aen hanse</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45351148">Blood and love</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44635273">From scratch</a>
@@ -884,6 +1034,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44464807">Красная Книга Неверлэнда и наблюдение за взаимодействием видов [визитка]</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45178006">Кровь из камней сочилась, как кровь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44810989">Мегера</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -894,6 +1047,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44635717">Нильфгаардские брачные игры</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45177559">Предложение, от которого невозможно отказаться</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44810221">Ронин</a>
