--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -398,6 +398,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44982673">[Вышивка] Кэналлийский Ворон</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45522451">[Клип и песня] Колыбельная Октавии</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45349870">[Клип] Весна</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -422,6 +425,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44985229">[Схема вышивки] Розы Алвасете</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45527827/chapters/114558910">Алексей Матошин</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45184024">В одной из бусин Ожерелья</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -434,6 +440,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44486074">Визитка команды Aeterna 2023</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45569293">Вот моя ладонь, вот твое тепло — им не страшен любой морок</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44647717">Встреча</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -443,7 +452,22 @@
         <a target="_blank" href="https://archiveofourown.org/works/44650042">Двадцать один</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45528199">Дворянин-крестьянин</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45525991">Девять</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45527827/chapters/114558691">Денис Нурулин</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45521749">Домой</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44651488">Дорога в небо, или история о том, как Бешеный пять раз ездил в командировку в Дриксен, и один раз, когда он привез работу на дом</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45527827/chapters/114558481">Евгений Шварц</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44612656">Жертвоприношение</a>
@@ -453,6 +477,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45181237">Зверь внутри тебя жаждет добычи, но у него есть только я</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45522049">Картина тушью</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44615401">Когда в Олларии цветёт сирень</a>
@@ -474,6 +501,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45182557">Люби меня, а не Войну!</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45527827/chapters/114558364">Максим Метельников</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44650417">Метельников и Ко</a>
@@ -530,6 +560,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44649274">Север и Юг</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45527827/chapters/114558772">Сергей Гилев</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44649391">Смерть идёт — я готова</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -568,6 +601,9 @@
 </ul>
 <h2>WTF Aetherna na zabore 2023</h2>
 <ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45512149">[Fanfic] Обморок</a>
+    </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44458210">[Визитка] Что такое череззабор и как его использовать?</a>
     </li>
@@ -612,6 +648,12 @@
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44433745">Визитка</a>
+    </li>
+</ul>
+<h2>WTF Box of Chocolates 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45617347">Шуба</a>
     </li>
 </ul>
 <h2>WTF BoZhan 2023</h2>
@@ -763,6 +805,9 @@
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45205654">[craft] Веер «Сады Ланьлина»</a>
     </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45514867">Мертвый, но счастливый</a>
+    </li>
 </ul>
 <h2>WTF Kylux and Co 2023</h2>
 <ul>
@@ -851,6 +896,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/45027442">Сердечный привет</a>
     </li>
 </ul>
+<h2>WTF Moon Knight 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45493861">Если волк на тебя смотрит, значит, он тебя видит</a>
+    </li>
+</ul>
 <h2>WTF Music 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -896,6 +947,9 @@
 <h2>WTF Our Flag Means Death 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45596008">[Video] Беда с мужиками</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45153568">Двойная оптика</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -921,6 +975,12 @@
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45148987">Вы</a>
+    </li>
+</ul>
+<h2>WTF Sea Adventures 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45518995">Джун Форсайт и море</a>
     </li>
 </ul>
 <h2>WTF Souls Ring 2023</h2>
@@ -966,6 +1026,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44967565">Комок цветущего пурпурного мха</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45511168">Король без королевства</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44967424">Могильная фиалка</a>
