--- a/wtf2023/05_spec.htm
+++ b/wtf2023/05_spec.htm
@@ -2924,6 +2924,10 @@
 <ul>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
+        <a target="_blank" href="https://archiveofourown.org/works/45469132">[Art+Text] Небесный тыгыдык</a>
+    </li>
+    <li>
+        <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/45473164">[Art] А можно всех посмотреть?</a>
     </li>
     <li>
@@ -2952,10 +2956,6 @@
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/45469132/chapters/114404716">Волчьи привычки</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/45494506">Волшебная кошка и необычный котик</a>
     </li>
     <li>
@@ -2969,10 +2969,6 @@
     <li>
         <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/45468307">Нет гномов лучше</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/45469132/chapters/114404095">Рыба поможет</a>
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
