--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -692,6 +692,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44787670">[Art] Blood Magic</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45670039">[Art] Choreographing routines</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44787586">[Art] Fenris</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -785,6 +788,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44808109">Почему на самом деле конфликтуют антивирусы</a>
     </li>
 </ul>
+<h2>WTF Jenshin Impact 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45660127">Ловушка</a>
+    </li>
+</ul>
 <h2>WTF Jin Guangyao 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -816,6 +825,9 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44839972"><span class="lang">English</span>General's Improbable Moms</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45641401"><span class="lang">English</span>Kylux Calendar 2023</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45020515"><span class="lang">English</span>Million Scarlet Roses</a>
@@ -906,6 +918,21 @@
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45024982">Любовь — это...</a>
+    </li>
+</ul>
+<h2>WTF MXTX and Multicultivation 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45660415">Как нормальные люди</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45660265">Памятные вещи</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45660319">Тебе достанется опытный супруг</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45660235">приноси, что удержишь в руках</a>
     </li>
 </ul>
 <h2>WTF Neglected 2023</h2>
